tailwind arbitrary values

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       </div>
     </nav>
 
-    <!-- Hero section with background -->
+    <!-- 1st section: Hero with background -->
     <div class="h-screen bg-cover bg-[url('./img/main-background.jpg')]">
       <div class="grid h-screen place-items-center bg-black/25">
         <div class="text-center text-white">
@@ -65,10 +65,10 @@
     <!-- 2nd div: Accomodations -->
     <div
       id="accomodations"
-      class="hero min-h-56 bg-texture-dark px-14 sm:px-32 py-20 overflow-visible"
+      class="hero min-h-56 bg-texture-dark px-6 sm:px-16 py-20 overflow-visible"
     >
       <h2>Abiquiu, New Mexico</h2>
-      <p class="text-3xl">
+      <p class="text-2xl">
         A gorgeous house perched above the Chama river on 22 stunning acres in
         the heart of Abiquiu. With gardens and fruit trees, an old growth
         "bosque," direct river access, and beautiful views, this is a magical
@@ -78,17 +78,24 @@
 
     <!-- 3rd Div:  -->
     <div id="calendar" class=""></div>
-    <div class="min-h-80 bg-paper px-14 sm:px-32 py-20">
-      <h2 class="slide-text">Abiquiu, New Mexico</h2>
-      <p class="slide-text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex cum
-        saepe dolorum repellendus provident voluptates exercitationem doloribus
-        possimus est.
-      </p>
+    <div class="sm:flex min-h-80 bg-paper px-6 sm:px-6 py-20">
+      <div class="sm:shrink-0">
+        <img
+          class="h-48 w-full object-cover sm:h-full sm:w-[500px]"
+          src="img/2.jpg"
+        />
+      </div>
+      <div class="sm:ml-2 p-6 flex justify-center items-center flex-col">
+        <p class="text-2xl">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex cum
+          saepe dolorum repellendus provident voluptates exercitationem
+          doloribus possimus est.
+        </p>
+      </div>
     </div>
 
     <!-- Fourth Div -->
-    <div class="min-h-56 bg-texture-dark px-14 sm:px-32 py-20">
+    <div class="min-h-56 bg-texture-dark px-6 sm:px-16 py-20">
       <h2>Abiquiu, New Mexico</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ex cum
