working, filler text still though

--- a/src/index.html
+++ b/src/index.html
@@ -477,18 +477,15 @@
     </div>
 
     <!-- 2nd div: About -->
-    <div
-      id="about"
-      class="hero min-h-56 bg-texture-dark px-6 sm:px-24 py-12 overflow-visible"
-    >
-      <div class="flex flex-col justify-center w-auto">
-        <h2 class="text-3xl w-[38rem]">
+    <div id="about" class="hero min-h-56 bg-texture-dark px-6 sm:px-24 py-12">
+      <div class="flex flex-col items-center">
+        <h2 class="text-3xl w-[80%] text-center">
           Book a stay at the
           <span class="italic"> spectacular Abiquiu Ranch </span>
           on the Chama River
         </h2>
 
-        <p class="text-2xl mt-8 text-center">
+        <p class="text-2xl w-[80%] mt-8 text-center">
           A gorgeous house perched above the Chama river on 22 stunning acres in
           the heart of Abiquiu. With gardens and fruit trees, an old growth
           "bosque," direct river access, and beautiful views, this is a magical
@@ -497,14 +494,14 @@
       </div>
 
       <div class="flex h-36 items-center justify-center relative m-4">
-        <img class="w-32 mx-10" src="img/decorations_1.svg" />
+        <img class="w-36 mx-10" src="img/decorations_1.svg" />
 
         <button
           class="p-4 border-solid text-3xl transition-all duration-700 hover:bg-orange-200"
         >
-          <img class="w-36" src="img/circle_button.svg" />
+          <img class="w-44" src="img/circle_button.svg" />
         </button>
-        <img class="w-32 mx-10 scale-x-[-1]" src="img/decorations_1.svg" />
+        <img class="w-36 mx-10 scale-x-[-1]" src="img/decorations_1.svg" />
       </div>
     </div>
 
@@ -514,10 +511,73 @@
         Accomodations
       </h3>
 
-      <div class="sm:flex pb-10">
+      <div class="grid sm:grid-cols-2 gap-8 m-8">
+        <div class="m-6">
+          <h4 class="text-3xl">The House</h4>
+          <p class="mb-4">
+            The house marries old New Mexico charm--deep set windows, kiva
+            fireplaces, antique and tribal furnishings, and original
+            artworks--with modern comforts and conveniences throughout. The main
+            section of the house is spaciously laid out with large and lovely
+            living and dining room areas, a fully stocked kitchen, an adjacent
+            game playing area, a wonderful screened sunroom, and a laundry and
+            mud room.
+          </p>
+          <div class="object-cover overflow-hidden">
+            <img class="" src="img/3.jpg" />
+          </div>
+        </div>
+        <div class="m-6">
+          <div class="object-cover overflow-hidden">
+            <h4 class="text-3xl">The Kitchen</h4>
+            <p class="mb-4">
+              The house marries old New Mexico charm--deep set windows, kiva
+              fireplaces, antique and tribal furnishings, and original
+              artworks--with modern comforts and conveniences throughout. The
+              main section of the house is spaciously laid out with large and
+              lovely living and dining room areas, a fully stocked kitchen, an
+              adjacent game playing area, a wonderful screened sunroom, and a
+              laundry and mud room.
+            </p>
+            <img class="" src="img/8.jpg" />
+          </div>
+        </div>
+        <div class="m-6">
+          <div class="object-cover overflow-hidden">
+            <h4 class="text-3xl">Bedrooms</h4>
+            <p class="mb-4">
+              The house marries old New Mexico charm--deep set windows, kiva
+              fireplaces, antique and tribal furnishings, and original
+              artworks--with modern comforts and conveniences throughout. The
+              main section of the house is spaciously laid out with large and
+              lovely living and dining room areas, a fully stocked kitchen, an
+              adjacent game playing area, a wonderful screened sunroom, and a
+              laundry and mud room.
+            </p>
+            <img class="" src="img/6.jpg" />
+          </div>
+        </div>
+        <div class="m-6">
+          <div class="object-cover overflow-hidden">
+            <h4 class="text-3xl">Bathrooms</h4>
+            <p class="mb-4">
+              The house marries old New Mexico charm--deep set windows, kiva
+              fireplaces, antique and tribal furnishings, and original
+              artworks--with modern comforts and conveniences throughout. The
+              main section of the house is spaciously laid out with large and
+              lovely living and dining room areas, a fully stocked kitchen, an
+              adjacent game playing area, a wonderful screened sunroom, and a
+              laundry and mud room.
+            </p>
+            <img class="" src="img/7.jpg" />
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="sm:flex pb-10">
         <div class="sm:shrink-0 overflow-hidden">
           <img
-            class="image-zoom h-48 w-full sm:w-[300px] sm:h-full object-cover"
+            class="image-zoom h-48 w-full sm:w-[26rem] sm:h-full object-cover"
             src="img/2.jpg"
           />
         </div>
@@ -533,59 +593,77 @@
             mud room.
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <!-- 4 - TESTIMONIALS -->
     <div class="min-h-56 px-6 sm:px-16 py-20">
       <div class="flex flex-row justify-center items-center">
-        <img class="w-44 scale-x-[-1] mx-16" src="img/decorations_1.svg" />
-
-        <div class="w-[50%]">
+        <div class="w-[80%]">
           <h2 class="text-4xl italic mb-4">Testimonials</h2>
-          <div class="relative">
-            <img
-              class="w-6 opacity-30 absolute top-[-10px] left-[-35px]"
-              src="img/quotes.svg"
-            />
-            <p class="text-2xl">
-              A truly spectacular home! We can't say enough about how much we
-              enjoyed our short, three-day stay here. The home itself is
-              comfortable and beautifully decorated, and the riverbed, bosque,
-              and gardens gorgeous. Perfectly located for day trips to Santa Fe
-              and Taos, though we found it hard to leave in the mornings! Brooks
-              is an excellent host, always responding quickly. We didn't want to
-              leave and are already planning our next visit.
-            </p>
-            <img
-              class="w-6 opacity-30 absolute bottom-[-10px] right-[-15px] scale-x-[-1] scale-y-[-1]"
-              src="img/quotes.svg"
-            />
-          </div>
-          <p class="mt-6 text-xl">-- Guest, April 2021</p>
 
-          <div class="relative mt-10">
+          <!-- 1st testimonial -->
+          <div class="flex">
+            <div>
+              <div class="relative">
+                <img
+                  class="w-6 opacity-30 absolute top-[-10px] left-[-35px]"
+                  src="img/quotes.svg"
+                />
+                <p class="text-2xl">
+                  A truly spectacular home! We can't say enough about how much
+                  we enjoyed our short, three-day stay here. The home itself is
+                  comfortable and beautifully decorated, and the riverbed,
+                  bosque, and gardens gorgeous. Perfectly located for day trips
+                  to Santa Fe and Taos, though we found it hard to leave in the
+                  mornings! Brooks is an excellent host, always responding
+                  quickly. We didn't want to leave and are already planning our
+                  next visit.
+                </p>
+                <img
+                  class="w-6 opacity-30 absolute bottom-[-10px] right-[-15px] scale-x-[-1] scale-y-[-1]"
+                  src="img/quotes.svg"
+                />
+              </div>
+              <p class="mt-6 text-xl">-- Guest, April 2021</p>
+            </div>
+            <!-- donkey svg decoration -->
             <img
-              class="w-6 opacity-30 absolute top-[-10px] left-[-35px]"
-              src="img/quotes.svg"
-            />
-            <p class="text-2xl">
-              This place is so relaxing and beautiful. We watched the sunrise
-              every morning from the large windows in the living room. My boys
-              loved our daily visits with the horses and burro. We’d also go
-              down to the river everyday to play. You can really disconnect and
-              take in all the natural beauty. The house is wonderful, it’s homey
-              and decorated thoughtfully.
-            </p>
-            <img
-              class="w-6 opacity-30 absolute bottom-[-10px] right-[-15px] scale-x-[-1] scale-y-[-1]"
-              src="img/quotes.svg"
+              class="hidden sm:block w-[20%] mx-8"
+              src="img/decorations_1.svg"
             />
           </div>
-          <p class="mt-6 text-xl">-- Guest, April 2021</p>
+
+          <!-- 2nd testimonial -->
+          <div class="flex flex-row-reverse mt-20">
+            <div>
+              <div class="relative">
+                <img
+                  class="w-6 opacity-30 absolute top-[-10px] left-[-35px]"
+                  src="img/quotes.svg"
+                />
+                <p class="text-2xl">
+                  This place is so relaxing and beautiful. We watched the
+                  sunrise every morning from the large windows in the living
+                  room. My boys loved our daily visits with the horses and
+                  burro. We’d also go down to the river everyday to play. You
+                  can really disconnect and take in all the natural beauty. The
+                  house is wonderful, it’s homey and decorated thoughtfully.
+                </p>
+                <img
+                  class="w-6 opacity-30 absolute bottom-[-10px] right-[-15px] scale-x-[-1] scale-y-[-1]"
+                  src="img/quotes.svg"
+                />
+              </div>
+              <p class="mt-6 text-xl">-- Guest, April 2021</p>
+            </div>
+            <!-- donkey svg decoration -->
+            <img
+              class="hidden sm:block w-[20%] mx-8 scale-x-[-1]"
+              src="img/decorations_1.svg"
+            />
+          </div>
         </div>
-
-        <img class="w-44 mx-8" src="img/decorations_1.svg" />
       </div>
     </div>
 
