--- a/src/index.html
+++ b/src/index.html
@@ -523,7 +523,7 @@
             game playing area, a wonderful screened sunroom, and a laundry and
             mud room.
           </p>
-          <div class="object-cover overflow-hidden">
+          <div class="object-cover overflow-hidden rounded">
             <img class="" src="img/3.jpg" />
           </div>
         </div>
@@ -539,7 +539,9 @@
               adjacent game playing area, a wonderful screened sunroom, and a
               laundry and mud room.
             </p>
-            <img class="" src="img/8.jpg" />
+            <div class="object-cover overflow-hidden rounded">
+              <img class="" src="img/8.jpg" />
+            </div>
           </div>
         </div>
         <div class="m-6">
@@ -554,7 +556,9 @@
               adjacent game playing area, a wonderful screened sunroom, and a
               laundry and mud room.
             </p>
-            <img class="" src="img/6.jpg" />
+            <div class="object-cover overflow-hidden rounded">
+              <img class="" src="img/6.jpg" />
+            </div>
           </div>
         </div>
         <div class="m-6">
@@ -569,7 +573,9 @@
               adjacent game playing area, a wonderful screened sunroom, and a
               laundry and mud room.
             </p>
-            <img class="" src="img/7.jpg" />
+            <div class="object-cover overflow-hidden rounded">
+              <img class="" src="img/7.jpg" />
+            </div>
           </div>
         </div>
       </div>
