got rid of GSAP parallax on hero, made hero a css bg

--- a/src/index.html
+++ b/src/index.html
@@ -459,13 +459,8 @@
     </nav>
 
     <!-- 1st section: Hero with background -->
-    <div class="overflow-hidden absolute">
-      <img
-        class="parallax object-cover min-h-screen -z-80"
-        src="./img/main-background.jpg"
-      />
-    </div>
-    <div class="">
+
+    <div class="bg-[url('./img/main-background.jpg')] bg-cover">
       <div class="grid h-screen place-items-center">
         <div class="text-center text-white">
           <h1 class="text-5xl slide-text first-letter:text-7xl tracking-widest">
