fixed logo svg color issue

--- a/src/events.html
+++ b/src/events.html
@@ -126,7 +126,7 @@
             <a
               href="https://www.airbnb.com/rooms/13564786?source_impression_id=p3_1649376142_kQf7km49xKvzbVV8"
             >
-              <img class="h-8" src="img/airbnb.svg" />
+              <img class="h-8" src="img/airbnb2.svg" />
             </a>
           </div>
         </div>
